--- a/src/CSSModules/Dashboard.module.css
+++ b/src/CSSModules/Dashboard.module.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-items: center;
     justify-content: flex-start; /*Align to the top*/
     text-align: center;
     background-color: #f4f4f4;
