--- a/src/CSSModules/Dashboard.module.css
+++ b/src/CSSModules/Dashboard.module.css
@@ -52,7 +52,7 @@
 }
 
 .goalCard {
-    flex: 1 1 calc(50% - 20px);
+    width: 1 1 calc(50% - 20px);
     min-width: 350px;
     max-width: 400px;
     background-color: #fff;
@@ -61,6 +61,10 @@
     margin: 10px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.goalCardContainer .goalCard:nth-child(2):first-child {
+    justify-content: space-between;
 }
 
 .goalCard:hover {
@@ -109,6 +113,74 @@ button:hover {
 .showMoreBtn:hover {
     background-color: #218838;
 }
+
+.modalBackdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.modalContent {
+    background: #fff;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    max-width: 500px;
+    width: 90%;
+    text-align: center;
+    position: relative;
+}
+
+.closeIcon {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    background: none;
+    color:#333;
+    font-size: 1.5rem;
+    border: none;
+    cursor: pointer;
+}
+
+.closeIcon:hover {
+    color: red;
+}
+
+.toastContainer {
+    font-size: 1rem;
+}
+
+.logProgressContainer {
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.3s ease-in-out;
+}
+
+.logProgressContainer.show {
+    max-height: 300px;
+}
+
+.toggleArrow {
+    font-size: 1.2rem;
+    margin-left: 8px;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+ .toggleArrow.down {
+    transform: rotate(0deg);
+ }
+
+ .toggleArrow.up {
+    transform: rotate(180deg);
+ }
+
 
 
 /* Responsiveness */
