--- a/src/CSSModules/GoalForm.module.css
+++ b/src/CSSModules/GoalForm.module.css
@@ -1,10 +1,10 @@
 .container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     padding: 20px;
-    max-width: 600px;
+    max-width: none;
     margin:0 auto;
     background-color: #f9f9f9; /*light grey*/
     border-radius: 10px;
@@ -12,22 +12,46 @@
     
 }
 
-select {
-    padding: 10px; /* Same as input fields */
-    font-size: 14px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    outline: none;
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
-    box-sizing: border-box;
-    height: 42px; /* Ensure it matches input fields */
-    background-color: #fff;
-    cursor: pointer;
+    padding-bottom: 10px;
+   
 }
 
-select:focus {
-    border-color: #007bff;
-    box-shadow: 0 0 4px rgba(0, 123, 255, 0.4);
+.closeIcon {
+    cursor: pointer;
+    color: #333;
+    transition: color 0.3s ease;
+    font-size: 26px;
+}
+
+.closeIcon:hover {
+    color: red;
+}
+
+input, select {
+    padding: 10px;
+    font-size: 14px;
+    border: 1px solid #ccc; /*light grey*/
+    border-radius: 5px;
+    outline: none;
+    width: 25vw !important;
+    max-width: 100% ;
+    height: 42px;
+    box-sizing: border-box;
+    
+}
+
+input:focus, select:focus{
+    border-color: #007bff;/*blue */
+    box-shadow: 0 0 4px rgba(0, 123, 255, 0.4);/* Soft Gloe Effect*/
+}
+
+select {
+    cursor: pointer;
 }
 
 h1{
@@ -35,15 +59,18 @@ h1{
     font-weight: bold;
     color: #333; /*dark grey*/
     margin-bottom: 20px;
-    text-align: center;
+    text-align: left;
     font-family: 'Roboto', sans-serif;
+    width: 100%;
 }
 
 .formGroup{
     display: flex;
     flex-direction: column;
-    margin-bottom: 20px;
+    margin-bottom: 12px;
     width: 100%;
+    max-width: none;
+
 }
 
 label{
@@ -51,22 +78,6 @@ label{
     color: #555;/*medium grey*/
     margin-bottom: 5px;
     text-align: left;
-}
-
-input{
-    padding: 10px;
-    font-size: 14px;
-    border: 1px solid #ccc; /*light grey*/
-    border-radius: 5px;
-    outline: none;
-    width: 100%;
-    box-sizing: border-box;
-    
-}
-
-input:focus{
-    border-color: #007bff;/*blue */
-    box-shadow: 0 0 4px rgba(0, 123, 255, 0.4);/* Soft Gloe Effect*/
 }
 
 .buttonGroup {
@@ -104,4 +115,17 @@ input:focus{
 
 .cancelButton:hover {
     background-color: #bbb;
+}
+
+@media (max-width: 768px) {
+    input, select {
+        width: 50vw !important;
+    }
+}
+
+@media (max-width: 480px) {
+    input, select {
+        width: 75vw !important;
+    }
+    
 }
