--- a/src/CSSModules/GoalProgress.module.css
+++ b/src/CSSModules/GoalProgress.module.css
@@ -41,6 +41,45 @@
 
 }
 
+.progressContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 10px; 
+  }
+.progressGraph {
+    min-height: 300px; 
+    flex-grow: 1; 
+  }
+  
+.progressHistory {
+    max-height: 150px; 
+    overflow-y: auto; 
+    padding: 10px;
+    border-top: 1px solid #ccc;
+  }
+
+.chartContainer {
+    height: 250px; 
+    width: 100%; 
+  }
+
+.showMoreBtn {
+    padding: 5px 10px;
+    background-color: #4b5563;
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 10px;
+    align-self: center;
+}
+
+.showMoreBtn:hover {
+    background-color:  #374151 ; 
+  }
 
 .closeBtn {
     background: none;
